@@ -1,3 +1,8 @@
+2008-09-28  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php, scorerender-class.php:
+	- When notation name is not found, throw exception instead.
+
 2008-09-27  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php (scorerender_filter):
